// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewProject > createNewProject demo default case 1`] = `
[
  "build.config.ts",
  "package.mock.json",
  "src/index.ts",
  "src/utils.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo tsup case 1`] = `
[
  "package.mock.json",
  "src/index.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsup.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo unbuild case 1`] = `
[
  "build.config.ts",
  "package.mock.json",
  "src/index.ts",
  "src/utils.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo vue-ui case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "index.html",
  "lib/HelloWorld.vue",
  "lib/index.ts",
  "package.mock.json",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/router/index.ts",
  "src/style.css",
  "src/vite-env.d.ts",
  "test/index.test.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.test.json",
  "vite.config.ts",
  "vite.shared.config.ts",
  "vitest.config.ts",
]
`;
